[package]
name = "tush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bat = "0.24.0"
clap = { version = "4.4.8", features = ["cargo", "derive"] }
nom = "7.1.3"
nom_locate = "4.2.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
walkdir = "2.4.0"
